karnc/tests/fixtures/negative/98_http_duplicate_route/src/svc.karn
context svc

service api from http {
  on GET("/orders/:id") by v: Visitor (id: String) -> Effect[HttpResult[String]] {
    Ok("first")
  }

  on GET("/orders/:id") by v: Visitor (id: String) -> Effect[HttpResult[String]] {
    Ok("second")
  }
}
